fix: overlapping of project images to header - set z-index to 6

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ header {
   position: sticky;
   top: 0;
   display: flex;
-  z-index: 3;
+  z-index: 6;
 }
 
 /* Nav shadow in dark theme */
